--- a/index.html
+++ b/index.html
@@ -4,6 +4,23 @@
 
     </header>
     <body>
-        Hello world
+        <h1>
+            Brandon Lee's CV portfolio
+        </h1>
+        <section>
+            <h3>
+                Work experience 
+            </h3>
+        </section>
+        <section>
+            <h3>
+                Education 
+            </h3>
+        </section>
+        <section>
+            <h3>
+                Skills 
+            </h3>
+        </section>
     </body>
 </html>
