Personal interest section

--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
         </section>
         <section>
             <h3>
-                Skills 
+                Skills
             </h3>
+        </section>
+        <section>
+            Personal interests
         </section>
     </body>
 </html>
