--- a/index.html
+++ b/index.html
@@ -22,5 +22,15 @@
                 Skills
             </h3>
         </section>
+        <section>
+            <h3>
+                Personal interests
+            </h3>
+        </section>
+        <section>
+            <h3>
+                References
+            </h3>
+        </section>
     </body>
 </html>
