Added comments on sections

--- a/index.html
+++ b/index.html
@@ -4,29 +4,44 @@
 
     </header>
     <body>
+        <!-- Title  -->
         <h1>
             Brandon Lee's CV portfolio
         </h1>
+        <!-- Personal statement section  -->
+        <section>
+            <h3>
+                Personal statement 
+            </h3>
+            <p>
+
+            </p>
+        </section>
+        <!-- List of work experience  -->
         <section>
             <h3>
                 Work experience 
             </h3>
         </section>
+        <!-- All of the schools I've been to  -->
         <section>
             <h3>
                 Education 
             </h3>
         </section>
+        <!-- All of my techy skills for placements  -->
         <section>
             <h3>
                 Skills
             </h3>
         </section>
+        <!-- Related personal interests for placements  -->
         <section>
             <h3>
                 Personal interests
             </h3>
         </section>
+        <!-- References if I need it  -->
         <section>
             <h3>
                 References
