Added links and started header tags

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
     <header>
-
+        <title>
+            Brandon's Portfolio 
+        </title>
     </header>
     <body>
         <!-- Title  -->
@@ -14,7 +16,7 @@
                 Personal statement 
             </h3>
             <p>
-
+                I am a recent graduate from the University of Surrey with a Master's degree in Mathematics. 
             </p>
         </section>
         <!-- List of work experience  -->
@@ -46,6 +48,13 @@
             <h3>
                 References
             </h3>
+        </section>
+        <section>
+            <h3>
+                Links 
+            </h3>
+            <a href="https://www.linkedin.com/in/brandon-lee-a96610202/">See my linkedin</a>
+            <a href="https://github.com/brandolee15">See my GitHub</a>
         </section>
     </body>
 </html>
