--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>
             Brandon's Portfolio 
         </title>
+        <link href="style.css" rel="stylesheet">
     </header>
     <body>
         <!-- Title  -->
